--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
           <h1 class="number" data-number="10">10</h1>
-          <span>Project Compleate</span>
+          <span>Project Complete</span>
         </div>
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
           <h1 class="number" data-number="4">4</h1>
