--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <li><b>Age:</b> 20</li>
             <li><b>Gender:</b> Male</li>
           </ul>
-          <button class="btn btn-theme-outline">Download CV</button>
+          <a href="https://drive.google.com/uc?export=download&id=1bbt_YxZID2PGxXShotRlAlLMlmucaXgj"><button class="btn btn-theme-outline">Download Resume</button></a>
         </div>
       </div>
     </div>
