--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
             <p>Contact me</p>
             <hr class="divider">
             <ul class="list-unstyled">
-              <li>varshithvh@gmail.com/li>
+              <li>varshithvh@gmail.com</li>
               <li>+916363549133</li>
               <li>+813023</li>
             </ul>
