--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Welcome</h5>
       <h1 class="fw-light mb-4">I'm <b class="fg-theme">Varshith</b> Hegde</h1>
-      <div class="badge">Android App Developer</div>
+      <div class="badge"><a href="https://github.com/Varshithvhegde/">Android App Developer</a></div>
     </div> <!-- End Caption header -->
     <div class="floating-button"><span class="ti-mouse"></span></div>
   </div>
