--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="caption-header text-center wow zoomInDown">
       <h5 class="fw-normal">Welcome</h5>
       <h1 class="fw-light mb-4">I'm <b class="fg-theme">Varshith</b> Hegde</h1>
-      <div class="badge"><a href="https://github.com/Varshithvhegde/">Android App Developer</a></div>
+      <div class="badge">Android App Developer</div>
     </div> <!-- End Caption header -->
     <div class="floating-button"><span class="ti-mouse"></span></div>
   </div>
@@ -629,7 +629,7 @@
             <hr class="divider">
             <ul class="list-unstyled">
               <li><a href="https://instagram.com/varshithvhegde">Instagram</a></li>
-              <li><a href="#">Facebook</a></li>
+              <li><a href="https://github.com/Varshithvhegde/">Github</a></li>
               <li><a href="#">Twitter</a></li>
               <li><a href="#">Youtube</a></li>
             </ul>
