--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             <li class="nav-item">
               <a href="#portfolio" class="nav-link" data-animate="scrolling">Portfolio</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a href="#blog" class="nav-link" data-animate="scrolling">Blog</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a href="#contact" class="nav-link" data-animate="scrolling">Contact</a>
             </li>
@@ -120,11 +120,11 @@
       <div class="row">
         <div class="col-lg-4 py-3">
           <div class="img-place wow fadeInUp">
-            <img src="../assets/img/var.jpg" alt="">
+            <img src="../assets/img/varshi1.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
-          <h1 class="fw-light">Varshith Hegde</h1>
+          <h1 class="fw-light">Varshith V Hegde</h1>
           <h5 class="fg-theme mb-3">Android App Developer</h5>
           <p class="text-muted"></p>
           <ul class="theme-list">
@@ -133,7 +133,9 @@
             <li><b>Age:</b> 20</li>
             <li><b>Gender:</b> Male</li>
           </ul>
+          <a href="https://github.com/Varshithvhegde" button class="btn btn-theme-outline">Visit My Github</button></a>
           <a href="https://drive.google.com/uc?export=download&id=1bbt_YxZID2PGxXShotRlAlLMlmucaXgj"><button class="btn btn-theme-outline">Download Resume</button></a>
+          <a href="https://github.com/Varshithvhegde" button class="btn btn-theme-outline">&nbsp;&nbsp;&nbsp;Playstore&nbsp;&nbsp;&nbsp;&nbsp;</button></a>
         </div>
       </div>
     </div>
@@ -345,7 +347,7 @@
       <h1 class="text-center fw-normal wow fadeInUp">See my work</h1>
       <div class="filterable-button py-3 wow fadeInUp" data-toggle="selected">
         <!-- <button class="btn btn-theme-outline selected" data-filter="*">All</button> -->
-        <button class="btn btn-theme-outline" data-filter=".apps">Apps</button>
+        <a href="https://play.google.com/store/apps/dev?id=7195155598989215375"><button class="btn btn-theme-outline" >My Playstore Apps</button></a>
         <!-- <button class="btn btn-theme-outline" data-filter=".template">Template</button>
         <button class="btn btn-theme-outline" data-filter=".ios">IOS</button>
         <button class="btn btn-theme-outline" data-filter=".ui-ux">UI/UX</button>
@@ -354,34 +356,35 @@
       </div>
 
       <div class="gridder my-3">
-        <div class="grid-item apps wow zoomIn">
-          <div class="img-place" data-src="../assets/img/work/work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
-            <img src="../assets/img/work/work-1.jpg" alt="">
+        
+        <div class="grid-item template wireframes wow zoomIn">
+          <div class="img-place" data-src="../assets/img/work/status.png" data-fancybox data-caption="<h5 class='fg-theme'>Whatsapp Status Saver</h5> <p>Tools ,Utilities</p>">
+            <img src="../assets/img/work/status.png" alt="">
             <div class="img-caption">
-              <h5 class="fg-theme">Mobile Travel App</h5>
-              <p>Travel, Discovery</p>
+              <h5 class="fg-theme">Whatsapp Status Saver</h5>
+              <p>Tools ,Utilities</p>
             </div>
           </div>
         </div>
-        <div class="grid-item template wireframes wow zoomIn">
-          <div class="img-place" data-src="../assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
-            <img src="../assets/img/work/work-2.jpg" alt="">
+        <div class="grid-item apps wow zoomIn">
+          <div class="img-place" data-src="../assets/img/work/paint.png" data-fancybox data-caption="<h5 class='fg-theme'>Painting Android App</h5> <p>Art, Discovery</p>">
+            <img src="../assets/img/work/paint.png" alt="">
             <div class="img-caption">
-              <h5 class="fg-theme">Music App</h5>
-              <p>Musics</p>
+              <h5 class="fg-theme" href="https://github.com">Painting Android App</h5>
+              <p>Art ,Discovery</p>
             </div>
           </div>
         </div>
         <div class="grid-item apps ios wow zoomIn">
-          <div class="img-place" data-src="../assets/img/work/work-3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
-            <img src="../assets/img/work/work-3.jpg" alt="">
+          <div class="img-place" data-src="../assets/img/work/scan.png" data-fancybox data-caption="<h5 class='fg-theme'>QR Code Scanner And Creator</h5> <p>Productivity Tools</p>">
+            <img src="../assets/img/work/scan.png" alt="">
             <div class="img-caption">
-              <h5 class="fg-theme">Gaming Dashboard</h5>
-              <p>Games, Streaming</p>
+              <h5 class="fg-theme">QR Code Scanner And Creator</h5>
+              <p>Productivity Tools</p>
             </div>
           </div>
         </div>
-        <div class="grid-item graphic ui-ux wow zoomIn">
+        <!-- <div class="grid-item graphic ui-ux wow zoomIn">
           <div class="img-place" data-src="../assets/img/work/work-4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
             <img src="../assets/img/work/work-4.jpg" alt="">
             <div class="img-caption">
@@ -407,10 +410,10 @@
               <p>Games, Streaming</p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div> <!-- End gridder -->
       <div class="text-center wow fadeInUp">
-        <a href="javascript:void(0)" class="btn btn-theme">Load More</a>
+        <a href="https:/github.com/varshithvhegde" class="btn btn-theme">Load More</a>
       </div>
     </div>
   </div> <!-- End Portfolio page -->
@@ -525,7 +528,7 @@
   </div> End client -->
   
   <!-- Blog -->
-  <div class="vg-page page-blog" id="blog">
+  <!-- <div class="vg-page page-blog" id="blog">
     <div class="container">
       <div class="text-center">
         <div class="badge badge-subhead wow fadeInUp">Blog</div>
@@ -573,7 +576,7 @@
         </div>
       </div>
     </div>
-  </div> <!-- End blog -->
+  </div> End blog -->
   
   <!-- Contact -->
   <div class="vg-page page-contact" id="contact">
