--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         </div> -->
       </div> <!-- End gridder -->
       <div class="text-center wow fadeInUp">
-        <a href="https:/github.com/varshithvhegde" class="btn btn-theme">Load More</a>
+        <a href="https://github.com/varshithvhegde" class="btn btn-theme">Load More</a>
       </div>
     </div>
   </div> <!-- End Portfolio page -->
