--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </ul>
           <a href="https://github.com/Varshithvhegde" button class="btn btn-theme-outline">Visit My Github</button></a>
           <a href="https://drive.google.com/uc?export=download&id=1bbt_YxZID2PGxXShotRlAlLMlmucaXgj"><button class="btn btn-theme-outline">Download Resume</button></a>
-          <a href="https://github.com/Varshithvhegde" button class="btn btn-theme-outline">&nbsp;&nbsp;&nbsp;Playstore&nbsp;&nbsp;&nbsp;&nbsp;</button></a>
+          <a href="https://play.google.com/store/apps/dev?id=7195155598989215375" button class="btn btn-theme-outline">&nbsp;&nbsp;&nbsp;Playstore&nbsp;&nbsp;&nbsp;&nbsp;</button></a>
         </div>
       </div>
     </div>
