--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                 </div>
               </div>
             </div></a>
-            <a href="https://varshithvhegde.github.io/todolist/">
+            <a href="https://varshithvhegde.github.io/rockpaperscissors/">
               <div class="grid-item template wireframes wow zoomIn">
                 <div class="img-place" data-src="../assets/img/rpsgame.png"  data-caption="<h5 class='fg-theme'>Whatsapp Status Saver</h5> <p>Tools ,Utilities</p>">
                   <img src="../assets/img/rpsgame.png" alt="">
