--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
           </div>
         </div>
       </div>
-      <div class="row justify-content-center mt-3">
+     <!-- <div class="row justify-content-center mt-3">
         <div class="col-12 mb-3">
           <h3 class="fw-normal text-center">Subscribe</h3>
         </div>
@@ -731,7 +731,7 @@
               <input type="submit" class="btn btn-theme no-shadow" value="Subscribe">
             </div>
           </form>
-        </div>
+        </div>!-->
         <div class="col-12">
           <p class="text-center mb-0 mt-4">Copyright &copy;2022</p>
         </div>
