--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
   
   <title>My Portfolio - Varshith V Hegde</title>
-
+<link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
   <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
   
   <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
@@ -32,6 +32,7 @@
 </head>
 <body class="theme-red">
   
+  <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
   <!-- Back to top button -->
   <div class="btn-back_to_top">
     <span class="ti-arrow-up"></span>
@@ -662,7 +663,8 @@
           </div>
         </div>
         <div class="col-lg-5">
-          <form class="vg-contact-form">
+         <!-- <form class="vg-contact-form">!-->
+            <form action="https://send.pageclip.co/SxJZxcppYgjAj9aeR0Xy9cDaQq9IMqmX/contact-form" class="vg-contact-form" method="post">
             <div class="form-row">
               <div class="col-12 mt-3 wow fadeInUp">
                 <input class="form-control" type="text" name="Name" placeholder="Your Name">
