--- a/index.html
+++ b/index.html
@@ -664,6 +664,7 @@
         </div>
         <div class="col-lg-5">
          <!-- <form class="vg-contact-form">!-->
+          <!-- Added Working Contact Form using PageClip -->
             <form action="https://send.pageclip.co/SxJZxcppYgjAj9aeR0Xy9cDaQq9IMqmX/contact-form" class="vg-contact-form" method="post">
             <div class="form-row">
               <div class="col-12 mt-3 wow fadeInUp">
