logo addedto work.html

--- a/work.html
+++ b/work.html
@@ -31,7 +31,7 @@
         <nav class="nav-desk">
             <center>
                 <div class="nav-logo">
-                    <a href="index.html"><img id="logo" src="assets/img/logo2.png"></a>
+                    <a href="index.html"><img id="logo" src="assets/img/favicon.ico"></a>
                 </div>
                 <div class="nav-items">
                     <ul>
