logo path changed

--- a/work.html
+++ b/work.html
@@ -23,7 +23,7 @@
     <meta name="Description"
         content="Ishan Sharma ishandeveloper Ishan Inc. Chandigarh, India www.ishandeveloper.com .NET | ML | AI | Python | UI/UX | App Developer | Flutter | Web Developer" />
     <title>POJECTS | VARSHITH</title>
-    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="assets/img/favicon.ico">
 </head>
 
 <body id="contact-body" style="overflow-x: hidden;">
