Added few more projects to work.html

--- a/work.html
+++ b/work.html
@@ -145,10 +145,10 @@
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
-                src="assets/img/work/ishandeveloper/hero.png"
+                src="assets/img/work/my/github profile finder.png"
               />
-              <h1>ishandeveloper.com</h1>
-              <div id="work-text">PORTFOLIO</div>
+              <h1>GITHUB PROFILE FINDER</h1>
+              <div id="work-text">PROFILE FINDER</div>
             </div>
           </div>
         </div>
@@ -157,19 +157,19 @@
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
-                src="assets/img/work/url/url-bar.png"
+                src="assets/img/work/my/status_saver (1500 × 900 px).png"
               />
-              <h1>URL Shortener</h1>
-              <div id="work-text">WEB APP</div>
+              <h1>Whatsapp Status Saver</h1>
+              <div id="work-text">Android APP</div>
             </div>
           </div>
           <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
-                src="assets/img/work/news/hero.png"
+                src="assets/img/work/my/chatBot.png"
               />
-              <h1>News App [GoLang]</h1>
+              <h1>Chat Bot</h1>
               <div id="work-text">WEB APP</div>
             </div>
           </div>
@@ -179,10 +179,10 @@
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
-                src="assets/img/work/foodfuel/food.png"
+                src="assets/img/work/my/SIGNER.png"
               />
-              <h1>FoodFuel</h1>
-              <div id="work-text">WEB APP</div>
+              <h1>PDF SIGN</h1>
+              <div id="work-text">ANDROID APP</div>
             </div>
           </div>
           <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
