--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
               <a href="#blog" class="nav-link" data-animate="scrolling">Blog</a>
             </li> -->
             <li class="nav-item">
+              <a href="work.html" class="nav-link" data-animate="scrolling">My Works</a>
+            </li>
+            <li class="nav-item">
               <a href="#contact" class="nav-link" data-animate="scrolling">Contact</a>
             </li>
           </ul>
