connected index page to work.html using load more button

--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
         
       </div>
       <div class="text-center wow fadeInUp">
-        <a href="https://github.com/Varshithvhegde?tab=repositories" class="btn btn-theme">Load More</a>
+        <a href="/work.html" class="btn btn-theme">Load More</a>
       </div>
     </div>
   </div> <!-- End Portfolio page -->
