Added New feature to work.html that onclick on every div

--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
         <div class="row" id="work-row">
           <div class="col-md-6 col-sm-12 bounceInLeft delay-2s">
             <center>
-              <div class="work-hero">
+              <div class="work-hero"  onclick="window.location.href = 'https://varshithvhegde.me/chatbot/';"> 
                 <img
                   class="work-hero-img"
                   src="assets/img/work/my/ScanMe_qrCode.png"
@@ -90,7 +90,7 @@
               </div>
             </center>
           </div>
-          <div class="col-md-6 col-sm-12">
+          <div class="col-md-6 col-sm-12" >
             <div class="work-des">
               <h1>SCAN ME</h1>
               <!-- <center>
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="row work-double-row">
-          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s" onclick="window.location.href = 'https://play.google.com/store/apps/details?id=com.varshith.justpaintit'">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
@@ -141,7 +141,7 @@
               <div id="work-text">ANDROID APP</div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInRight delay-3s" onclick="window.location.href = 'https://varshithvhegde.me/GithubProfileFinder/';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div class="row work-double-row" id="row-3">
-          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s" onclick="window.location.href = 'https://github.com/Varshithvhegde/WhatsApp_Status_Saver';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
@@ -163,7 +163,7 @@
               <div id="work-text">Android APP</div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInRight delay-3s" onclick="window.location.href = 'https://varshithvhegde.me/chatbot/';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
@@ -175,7 +175,7 @@
           </div>
         </div>
         <div class="row work-double-row" id="row-3">
-          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s" onclick="window.location.href = 'https://play.google.com/store/apps/details?id=com.varshith.pdfdigitalsignature';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
@@ -185,7 +185,7 @@
               <div id="work-text">ANDROID APP</div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInRight delay-3s" onclick="window.location.href = 'https://github.com/Varshithvhegde/Anime_Wallpaper';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
@@ -199,7 +199,7 @@
 
 
         <div class="row work-double-row" id="row-3">
-          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s" onclick="window.location.href = 'https://varshithvhegde.me/MarkEditor/';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
@@ -209,11 +209,12 @@
               <div id="work-text">WEB APP</div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInRight delay-3s" onclick="window.location.href = 'https://github.com/Varshithvhegde/Codester';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
                 src="assets/img/work/my/CODESTER.png"
+
               />
               <h1>CODESTER</h1>
               <div id="work-text">ANDROID APP</div>
