Added New feature to work.html that onclick on every div

--- a/work.html
+++ b/work.html
@@ -82,7 +82,7 @@
         <div class="row" id="work-row">
           <div class="col-md-6 col-sm-12 bounceInLeft delay-2s">
             <center>
-              <div class="work-hero"  onclick="window.location.href = 'https://varshithvhegde.me/chatbot/';"> 
+              <div class="work-hero"  onclick="window.location.href = 'https://play.google.com/store/apps/details?id=com.varshith.varshith.qr_generator';"> 
                 <img
                   class="work-hero-img"
                   src="assets/img/work/my/ScanMe_qrCode.png"
