--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
               <a href="work.html" class="nav-link" data-animate="scrolling">My Works</a>
             </li>
             <li class="nav-item">
+              <a href="hugo-blog" class="nav-link" data-animate="scrolling">Blogs</a>
+            </li>
+            <li class="nav-item">
               <a href="#contact" class="nav-link" data-animate="scrolling">Contact</a>
             </li>
           </ul>
