--- a/work.html
+++ b/work.html
@@ -221,6 +221,33 @@
             </div>
           </div>
         </div>
+
+
+        <div class="row work-double-row" id="row-3">
+          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s" onclick="window.location.href = 'https://varshithvhegde.me/hugo-blog/';">
+            <div class="work-hero-card">
+              <img
+                class="work-card-hero-img"
+                src="assets/img/work/my/blog_site.png"
+              />
+              <h1>Online MarkDown Editor</h1>
+              <div id="work-text">WEB APP</div>
+            </div>
+          </div>
+          <!-- <div class="col-md-6 col-sm-12 bounceInRight delay-3s" onclick="window.location.href = 'https://github.com/Varshithvhegde/Codester';">
+            <div class="work-hero-card">
+              <img
+                class="work-card-hero-img"
+                src="assets/img/work/my/CODESTER.png"
+
+              />
+              <h1>CODESTER</h1>
+              <div id="work-text">ANDROID APP</div>
+            </div>
+          </div> -->
+        </div>
+
+
         
         
         <!-- <div class="row work-double-row" id="row-3">
