Added New Project to Work blog site

--- a/work.html
+++ b/work.html
@@ -230,7 +230,7 @@
                 class="work-card-hero-img"
                 src="assets/img/work/my/blog_site.png"
               />
-              <h1>Online MarkDown Editor</h1>
+              <h1>My Blog Site</h1>
               <div id="work-text">WEB APP</div>
             </div>
           </div>
