--- a/work.html
+++ b/work.html
@@ -234,7 +234,7 @@
               <div id="work-text">WEB APP</div>
             </div>
           </div>
-          <!-- <div class="col-md-6 col-sm-12 bounceInRight delay-3s" onclick="window.location.href = 'https://github.com/Varshithvhegde/Codester';">
+          <div class="col-md-6 col-sm-12 bounceInRight delay-3s" onclick="window.location.href = 'https://github.com/Varshithvhegde/Codester';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
@@ -244,7 +244,7 @@
               <h1>CODESTER</h1>
               <div id="work-text">ANDROID APP</div>
             </div>
-          </div> -->
+          </div>
         </div>
 
 
