Added New Project to Work blog site

--- a/work.html
+++ b/work.html
@@ -241,7 +241,7 @@
                 src="assets/img/work/my/CODESTER.png"
 
               />
-              <h1>CODESTER</h1>
+              <h1>Mite News</h1>
               <div id="work-text">ANDROID APP</div>
             </div>
           </div>
