Added New Project to Work blog site

--- a/work.html
+++ b/work.html
@@ -238,7 +238,7 @@
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
-                src="assets/img/work/my/CODESTER.png"
+                src="assets/img/work/my/Mite News.png"
 
               />
               <h1>Mite News</h1>
