--- a/index.html
+++ b/index.html
@@ -457,23 +457,23 @@
           </div>
         </div></a> -->
         <div class="gridder my-3">
-          <a href="https://varshithvhegde.github.io/react_calculator">
+          <a href="https://varshithvhegde.github.io/Mark2">
           <div class="grid-item template wireframes wow zoomIn">
             <div class="img-place" data-src="../assets/img/calculator_react.png"  data-caption="<h5 class='fg-theme'>Whatsapp Status Saver</h5> <p>Tools ,Utilities</p>">
-              <img src="../assets/img/calculator_react.png" alt="">
+              <img src="../assets/img/work/m2 (1).png" alt="">
               <div class="img-caption"> 
-                <h5 class="fg-theme">React Calculator</h5>
-                <p>A Simple Calculator</p>
+                <h5 class="fg-theme">Markdown Editor</h5>
+                <p>A Basic Editor</p>
               </div>
             </div>
           </div></a>
           <a href="https://varshithvhegde.github.io/todolist/">
             <div class="grid-item template wireframes wow zoomIn">
               <div class="img-place" data-src="../assets/img/calculator_react.png"  data-caption="<h5 class='fg-theme'>Whatsapp Status Saver</h5> <p>Tools ,Utilities</p>">
-                <img src="../assets/img/Todo.png" alt="">
+                <img src="../assets/img/work/my/blog_site.png" alt="">
                 <div class="img-caption"> 
-                  <h5 class="fg-theme">ToDo List App</h5>
-                  <p>A task reminding web app</p>
+                  <h5 class="fg-theme">My Blogs</h5>
+                  <p>A Blogging Web App</p>
                 </div>
               </div>
             </div></a>
