--- a/index.html
+++ b/index.html
@@ -480,10 +480,10 @@
             <a href="https://varshithvhegde.github.io/rockpaperscissors/">
               <div class="grid-item template wireframes wow zoomIn">
                 <div class="img-place" data-src="../assets/img/rpsgame.png"  data-caption="<h5 class='fg-theme'>Whatsapp Status Saver</h5> <p>Tools ,Utilities</p>">
-                  <img src="../assets/img/rpsgame.png" alt="">
+                  <img src="../assets/img/work/w.png" alt="">
                   <div class="img-caption"> 
-                    <h5 class="fg-theme">Rock Paper Scissor Game</h5>
-                    <p>A simple web game</p>
+                    <h5 class="fg-theme">My Weather</h5>
+                    <p>An Weather Checking Web App</p>
                   </div>
                 </div>
               </div></a>
