--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
               </div>
             </div>
           </div></a>
-          <a href="https://varshithvhegde.github.io/todolist/">
+          <a href="https://varshithvhegde.me/hugo-blog/">
             <div class="grid-item template wireframes wow zoomIn">
               <div class="img-place" data-src="../assets/img/calculator_react.png"  data-caption="<h5 class='fg-theme'>Whatsapp Status Saver</h5> <p>Tools ,Utilities</p>">
                 <img src="../assets/img/work/my/blog_site.png" alt="">
@@ -477,7 +477,7 @@
                 </div>
               </div>
             </div></a>
-            <a href="https://varshithvhegde.github.io/rockpaperscissors/">
+            <a href="https://varshithvhegde.github.io/weather/">
               <div class="grid-item template wireframes wow zoomIn">
                 <div class="img-place" data-src="../assets/img/rpsgame.png"  data-caption="<h5 class='fg-theme'>Whatsapp Status Saver</h5> <p>Tools ,Utilities</p>">
                   <img src="../assets/img/work/w.png" alt="">
