--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
       </div> <!-- End gridder -->
       <div class="filterable-button py-3 wow fadeInUp" data-toggle="selected">
         
-        <a href="https://github.com/Varshithvhegde/Varshithvhegde#readme"><button class="btn btn-theme-outline" >My Web Apps</button></a>
+        <a href="https://github.com/Varshithvhegde/"><button class="btn btn-theme-outline" >My Web Apps</button></a>
        
       </div>
       <!-- <div class="gridder my-3">
