--- a/work.html
+++ b/work.html
@@ -253,9 +253,9 @@
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
-                src="assets/img/work/todo/hero.png"
+                src="assets/img/work/my/weatherweb.png"
               />
-              <h1>Task-To-Do</h1>
+              <h1>Weather App</h1>
               <div id="work-text">WEB APP</div>
             </div>
           </div>
