--- a/work.html
+++ b/work.html
@@ -259,7 +259,7 @@
               <div id="work-text">WEB APP</div>
             </div>
           </div>
-          <!-- <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
@@ -268,8 +268,8 @@
               <h1>Basketball Tournament</h1>
               <div id="work-text">WEB TEMPLATE</div>
             </div>
-          </div> -->
-          
+          </div>
+
         </div>
 
         
