--- a/work.html
+++ b/work.html
@@ -263,7 +263,7 @@
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
-                src="assets/img/work/basketball/hero.png"
+                src="assets/img/work/my/frame_generic_dark (8).png"
               />
               <h1>Basketball Tournament</h1>
               <div id="work-text">WEB TEMPLATE</div>
