--- a/work.html
+++ b/work.html
@@ -265,8 +265,8 @@
                 class="work-card-hero-img"
                 src="assets/img/work/my/reposhowcase.png"
               />
-              <h1>Basketball Tournament</h1>
-              <div id="work-text">WEB TEMPLATE</div>
+              <h1>Github Repo ShowCase</h1>
+              <div id="work-text">WEB App</div>
             </div>
           </div>
 
