--- a/work.html
+++ b/work.html
@@ -249,7 +249,7 @@
 
 
         <div class="row work-double-row" id="row-3">
-          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s" onclick="window.location.href = 'https://Varshithvhegde.github.io/weather';"">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
@@ -259,7 +259,7 @@
               <div id="work-text">WEB APP</div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInRight delay-3s" onclick="window.location.href = 'https://varshithvhegde.me/githubreposhowcase/';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
