--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <li><b>Gender:</b> Male</li>
           </ul>
           <a href="https://github.com/Varshithvhegde" button class="btn btn-theme-outline">Visit My Github</button></a>
-          <a href="https://github.com/Varshithvhegde/Varshithvhegde.github.io/raw/main/Varshith_V_Hegde_Resume(2022).pdf"><button class="btn btn-theme-outline">Download Resume</button></a>
+          <a href="https://github.com/Varshithvhegde/Varshithvhegde.github.io/raw/main/Varshith%20V%20Hegde%20Resume.pdf"><button class="btn btn-theme-outline">Download Resume</button></a>
           <a href="https://play.google.com/store/apps/dev?id=7195155598989215375" button class="btn btn-theme-outline">&nbsp;&nbsp;&nbsp;Playstore&nbsp;&nbsp;&nbsp;&nbsp;</button></a>
         </div>
       </div>
