--- a/404.html
+++ b/404.html
@@ -174,10 +174,10 @@
     <div id="tsparticles"></div>
     <div class="denied__wrapper">
         <h1>404</h1>
-        <h3>LOST IN <span>SPACE</span> App-Name? Hmm, looks like that page doesn't exist.</h3>
+        <h3>LOST IN <span>SPACE</span>? Hmm, looks like this page doesn't exist.</h3>
         <img id="astronaut" src="assets/img/astronaut.svg" />
         <img id="planet" src="assets/img/planet.svg" />
-        <a href="#"><button class="denied__link">Go Home</button></a>
+        <a href="https://Varshithvhegde.github.io"><button class="denied__link">Go Home</button></a>
     </div>
 
     <script type="text/javascript"
