--- a/404.html
+++ b/404.html
@@ -175,8 +175,8 @@
     <div class="denied__wrapper">
         <h1>404</h1>
         <h3>LOST IN <span>SPACE</span>? Hmm, looks like this page doesn't exist.</h3>
-        <img id="astronaut" src="assets/img/astronaut.svg" />
-        <img id="planet" src="assets/img/planet.svg" />
+        <img id="astronaut" src="https://raw.githubusercontent.com/Varshithvhegde/Varshithvhegde.github.io/b9768546b24abbd9474f02ac48783bde3736ca49/assets/img/astronaut.svg" />
+        <img id="planet" src="https://raw.githubusercontent.com/Varshithvhegde/Varshithvhegde.github.io/b9768546b24abbd9474f02ac48783bde3736ca49/assets/img/planet.svg" />
         <a href="https://Varshithvhegde.github.io"><button class="denied__link">Go Home</button></a>
     </div>
 
