--- a/404.html
+++ b/404.html
@@ -3,6 +3,9 @@
 
 <head>
     <link type="text/css" rel="stylesheet" href="css/404.css" />
+    <title> 
+        404 - Page Not Found
+    </title>
 </head>
 
 <body class="permission_denied">
