--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
             <ul class="list-unstyled">
               <li><a href="https://instagram.com/varshithvhegde">Instagram</a></li>
               <li><a href="https://github.com/Varshithvhegde/">Github</a></li>
-              <li><a href="#">Twitter</a></li>
+              <li><a href="http://www.linkedin.com/in/varshithvhegde">Linkedin</a></li>
               <li><a href="#">Youtube</a></li>
             </ul>
           </div>
