--- a/index.html
+++ b/index.html
@@ -493,7 +493,8 @@
         <a href="/work.html" class="btn btn-theme">Load More</a>
       </div>
     </div>
-  </div> <!-- End Portfolio page -->
+  </div> 
+  <!-- End Portfolio page -->
   
   <!-- Testimonial -->
   <!-- <div class="vg-page page-testimonial">
