--- a/work.html
+++ b/work.html
@@ -273,18 +273,18 @@
         </div>
 
         
-        <!-- <div class="row work-double-row" id="row-3">
+        <div class="row work-double-row" id="row-3">
           <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
-                src="assets/img/work/todo/hero.png"
+                src="assets/img/work/my/placements.png"
               />
               <h1>Task-To-Do</h1>
               <div id="work-text">WEB APP</div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
+          <!-- <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
@@ -293,8 +293,8 @@
               <h1>Basketball Tournament</h1>
               <div id="work-text">WEB TEMPLATE</div>
             </div>
-          </div>
-        </div> -->
+          </div> -->
+        </div>
 
         <!-- <div class="row work-double-row" id="row-3">
           <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
