--- a/work.html
+++ b/work.html
@@ -280,7 +280,7 @@
                 class="work-card-hero-img"
                 src="assets/img/work/my/placements.png"
               />
-              <h1>Task-To-Do</h1>
+              <h1>Placements</h1>
               <div id="work-text">WEB APP</div>
             </div>
           </div>
