--- a/work.html
+++ b/work.html
@@ -274,7 +274,7 @@
 
         
         <div class="row work-double-row" id="row-3">
-          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s" onclick="window.location.href = 'https://varshithvhegde.me/placements/';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
