Added new projects

--- a/work.html
+++ b/work.html
@@ -271,8 +271,6 @@
           </div>
 
         </div>
-
-        
         <div class="row work-double-row" id="row-3">
           <div class="col-md-6 col-sm-12 bounceInLeft delay-3s" onclick="window.location.href = 'https://varshithvhegde.me/placements/';">
             <div class="work-hero-card">
@@ -284,16 +282,17 @@
               <div id="work-text">WEB APP</div>
             </div>
           </div>
-          <!-- <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInRight delay-3s" onclick="window.location.href = 'https://varshithvhegde.me/githubreposhowcase/';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
-                src="assets/img/work/basketball/hero.png"
+                src="assets/img/work/my/anyshare-fileshare.png"
               />
-              <h1>Basketball Tournament</h1>
-              <div id="work-text">WEB TEMPLATE</div>
+              <h1>Any Share</h1>
+              <div id="work-text">File Sharing Website</div>
             </div>
-          </div> -->
+          </div>
+
         </div>
 
         <!-- <div class="row work-double-row" id="row-3">
