New project added

--- a/work.html
+++ b/work.html
@@ -282,7 +282,7 @@
               <div id="work-text">WEB APP</div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 bounceInRight delay-3s" onclick="window.location.href = 'https://varshithvhegde.me/githubreposhowcase/';">
+          <div class="col-md-6 col-sm-12 bounceInRight delay-3s" onclick="window.location.href = 'https://anyshare.vercel.app/';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
