Added ShareText Website Project

--- a/work.html
+++ b/work.html
@@ -294,31 +294,21 @@
           </div>
 
         </div>
-
-        <!-- <div class="row work-double-row" id="row-3">
+<div class="row work-double-row" id="row-3">
           <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
-                src="assets/img/work/dictionary/hero.png"
+                src="assets/img/work/my/sharetextimg.png"
               />
-              <h1>Dictionary</h1>
-              <div id="work-text">FLUTTER APP</div>
+              <h1>Share Text</h1>
+              <div id="work-text">Web APP</div>
             </div>
           </div>
-          <div class="col-md-6 col-sm-12 bounceInRight delay-3s">
-            <div class="work-hero-card">
-              <img
-                class="work-card-hero-img"
-                src="assets/img/work/pokemon/hero.png"
-              />
-              <h1>PokemonPedia</h1>
-              <div id="work-text">FLUTTER APP</div>
-            </div>
-          </div>
+          
         </div>
 
-        <div class="row work-double-row" id="row-3">
+       <!--  <div class="row work-double-row" id="row-3">
           <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
             <div class="work-hero-card">
               <img
