--- a/work.html
+++ b/work.html
@@ -295,7 +295,7 @@
 
         </div>
 <div class="row work-double-row" id="row-3">
-          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s">
+          <div class="col-md-6 col-sm-12 bounceInLeft delay-3s" onclick="window.location.href = 'https://sharetext.vercel.app/';">
             <div class="work-hero-card">
               <img
                 class="work-card-hero-img"
